      - Lithuanian updated by Kestutis Biliunas. Closes: #479453

  * Patches from Robert Luberda:
    - Fix diversion of output to /tmp/update-menus.XXX
    - Exit cleanly if the dpkg database is broken. Closes: #341701
  
  * debian/control, doc/su-to-root.1, doc/su-to-root.fr.1, scripts/su-to-root:
    - Add support for ktsuss. Closes: #478841. Thanks Yves-Alexis Perez.

 -- Bill Allombert <ballombe@debian.org>  Mon, 12 May 2008 20:41:42 +0200

menu (2.1.38) unstable; urgency=low

  * The "little zebra" release.
  * Handling of l10n by Christian Perrier:
    + Menu sections translations:
      - Russian updated by Yuri Kozlov. Closes: #462283
      - Traditional Chinese updated by Tetralet. Closes: #464855
      - Romanian updated by stan ioan-eugen. Closes: #466618
      - Basque updated by Piarre Beobide. Closes: #468682
    + programs translations:
      - French completed by Christian Perrier. Closes: #468466
      - Romanian updated by stan ioan-eugen. Closes: #466618
    + su-to-root translations:
      - Romanian updated by stan ioan-eugen. Closes: #466618

  * Work-around apt bug #463030 by calling setsid in daemon mode.
    Closes: #462648. Thanks Dmitry E. Oboukhov for the patch.

  * Patch from Robert Luberda:
    - Dependency check now handles virtual packages. Closes: #452801

  * doc/menu.sgml:
    - Remove excerpt from menu policy about authoritativeness
      pasted by mistake.  Closes: #466248. Thanks Robert Luberda.

  * debian/bug.presubj:
    - Remove color escape codes which are not displayed correctly by
      current reportbug. Thanks Dan Jacobson.
  
  * su-to-root:
    - Fix support for sux.
    - Fix command quoting for sudo.  Closes: #465136. Thanks Daniel Hahler.
    - Fix typo passwd->password. Closes: #462645. Thanks Salvatore Bonaccorso.

  * examples/translate_menus:
    - automatic conversion from old section names to new names would replace
      Locking by Lockinging. Closes: #468385. Thanks Yves-Alexis Perez.
