@@ -13,13 +13,23 @@ set -e
 #  kill -KILL `pidof update-menus` 2> /dev/null || true
 #fi
 
-chmod a+x /usr/bin/update-menus
-update-menus
+case "$1" in
+triggered)
+	# This is triggered by any installation of a menu file and by
+	# any call to update-menus made in a package maintainer script.
+	update-menus --trigger
+        exit 0
+;;
+*)
+	chmod a+x /usr/bin/update-menus
+	update-menus
 
-install-info --quiet \
-            --menuentry="Debian menu" \
-            --section "Information" "Information:" \
-            --description="The Debian menu system" \
-            /usr/share/info/menu.info
+	install-info --quiet \
+	            --menuentry="Debian menu" \
+	            --section "Information" "Information:" \
+	            --description="The Debian menu system" \
+	            /usr/share/info/menu.info
+;;
+esac
 
 #DEBHELPER#
